Update tests for custom main test
Signed-off-by: Emerson Knapp <emerson.b.knapp@gmail.com>

--- a/examples/stand_alone/custom_main/CMakeLists.txt
+++ b/examples/stand_alone/custom_main/CMakeLists.txt
@@ -1,5 +1,16 @@
-cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
+project(custom_main)
 
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
+
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wthread-safety)
+endif()
 
 find_package(gazebo REQUIRED)
 
@@ -10,5 +21,5 @@ list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
 add_executable(custom_main custom_main.cc)
 target_link_libraries(custom_main ${GAZEBO_LIBRARIES} pthread)
 
-add_executable(custom_main_vector custom_main_vector.cc)
-target_link_libraries(custom_main_vector ${GAZEBO_LIBRARIES} pthread)
+# add_executable(custom_main_vector custom_main_vector.cc)
+# target_link_libraries(custom_main_vector ${GAZEBO_LIBRARIES} pthread)
